infra/services/nuclio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nuclio
  labels:
    app.kubernetes.io/name: nuclio
    app.kubernetes.io/managed-by: helm
