infra/services/nuclio/ingressroute.yaml
apiVersion: traefik.containo.io/v1alpha1
kind: IngressRoute
metadata:
  name: nuclio
  namespace: nuclio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nuclio.cluster.local`)
      kind: Rule
      middlewares:
        - name: nuclio-oauth
          namespace: nuclio
      services:
        - name: nuclio-ingress
          port: 8080
  tls:
    certResolver: le
